@@ -1,3 +1,6 @@
+2013-05-03  Kirit Saelensminde  <kirit@felspar.com>
+ Make sure that the `fostlib::worker` can't leak an exception when it's destructed.
+
 2013-03-10  Kirit Saelensminde  <kirit@felspar.com>
  Added the ability to set the log message module when using the logging DSL through a new `.module()` member on the log message builder.
  `fostlib::absorbException` has been deprecated in favour of `fostlib::absorb_exception`.
